[#140] 회원가입 뷰들 상단, 좌우 constraint 변경
### Description

- signUpFirst
- signUpSecond
- signUpThird
-  login 좌우
-  닉네임 에러 label 처음에 hidden

Resolve #140

--- a/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
@@ -27,7 +27,6 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일 주소" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lnf-3u-DHh">
                                 <rect key="frame" x="24" y="346" width="327" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="327" id="9Kb-05-pSw"/>
                                     <constraint firstAttribute="height" constant="40" id="hEg-zm-9rZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -37,7 +36,6 @@
                                 <rect key="frame" x="24" y="394" width="327" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="equ-8Y-GVP"/>
-                                    <constraint firstAttribute="width" constant="327" id="wcH-jv-lmR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
@@ -47,7 +45,6 @@
                                 <color key="backgroundColor" name="Pink"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="ubf-3W-kz5"/>
-                                    <constraint firstAttribute="width" constant="327" id="vAa-R2-hUL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="tintColor" red="0.96078431610000004" green="0.96078431610000004" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -89,8 +86,10 @@
                             <constraint firstItem="OAt-3L-jxc" firstAttribute="leading" secondItem="QBD-8D-N51" secondAttribute="trailing" constant="7" id="0LG-sL-cPA"/>
                             <constraint firstItem="TXe-88-DED" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="0eF-FD-Mrm"/>
                             <constraint firstItem="QBD-8D-N51" firstAttribute="firstBaseline" secondItem="D76-iV-XQ7" secondAttribute="firstBaseline" id="1DT-dd-fgy"/>
+                            <constraint firstItem="TXe-88-DED" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="30L-3i-llu"/>
                             <constraint firstItem="K6r-Lj-O8f" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="9Go-eh-V2f"/>
                             <constraint firstItem="TXe-88-DED" firstAttribute="top" secondItem="Lnf-3u-DHh" secondAttribute="bottom" constant="8" id="AYs-Yn-4hP"/>
+                            <constraint firstItem="K6r-Lj-O8f" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="BjB-jw-NS9"/>
                             <constraint firstItem="QBD-8D-N51" firstAttribute="firstBaseline" secondItem="OAt-3L-jxc" secondAttribute="firstBaseline" id="CLd-0r-yn9"/>
                             <constraint firstItem="QBD-8D-N51" firstAttribute="baseline" secondItem="OAt-3L-jxc" secondAttribute="baseline" id="IB7-vL-dnF"/>
                             <constraint firstItem="OAt-3L-jxc" firstAttribute="top" secondItem="K6r-Lj-O8f" secondAttribute="bottom" constant="20" id="LST-fN-4Ax"/>
@@ -99,9 +98,12 @@
                             <constraint firstItem="QBD-8D-N51" firstAttribute="baseline" secondItem="D76-iV-XQ7" secondAttribute="baseline" id="SZh-nP-pnM"/>
                             <constraint firstItem="lvQ-qD-3Mp" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="WqF-Iq-B1v"/>
                             <constraint firstItem="Lnf-3u-DHh" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Xtc-Cc-50H"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="TXe-88-DED" secondAttribute="trailing" constant="24" id="dnP-jy-UM5"/>
                             <constraint firstItem="D76-iV-XQ7" firstAttribute="top" secondItem="K6r-Lj-O8f" secondAttribute="bottom" constant="20" id="hYL-ef-EGQ"/>
                             <constraint firstItem="QBD-8D-N51" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="iTl-dj-ZM2"/>
                             <constraint firstItem="lvQ-qD-3Mp" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="78" id="iaC-bv-c7t"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Lnf-3u-DHh" secondAttribute="trailing" constant="24" id="wsz-4e-WGw"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="K6r-Lj-O8f" secondAttribute="trailing" constant="24" id="yXu-WV-9p4"/>
                             <constraint firstItem="QBD-8D-N51" firstAttribute="leading" secondItem="D76-iV-XQ7" secondAttribute="trailing" constant="7" id="ybY-in-fwg"/>
                         </constraints>
                     </view>
