--- a/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Feed/Feed.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -40,7 +39,7 @@
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VN-3I-WEj">
                                 <rect key="frame" x="0.0" y="-6" width="414" height="50"/>
-                                <color key="backgroundColor" name="LightPink"/>
+                                <color key="backgroundColor" red="1" green="0.85490196078431369" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="B4g-TN-APh"/>
                                 </constraints>
@@ -15824,9 +15823,6 @@ T7AADk+yAA5PtAAOYVQADmFZAA5hZgAOYWkADmF2AA5hewAOYYMADmGGAA5hiwAOYZMAAAAAAAAEAQAA
 AAAAAABWAAAAAAAAAAAAAAAAAA5hlg
 </mutableData>
         </image>
-        <namedColor name="LightPink">
-            <color red="1" green="0.83099997043609619" blue="0.86299997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
